Bug 333306 r+a=vladimir Crash with pragma statements that return values